RESOLVED FIXED15197
REGRESSION: Some Yahoo text entry fields render as lines rather than text entry boxes.
https://bugs.webkit.org/show_bug.cgi?id=15197
Summary REGRESSION: Some Yahoo text entry fields render as lines rather than text ent...
CW
Reported 2007-09-12 15:42:23 PDT
On an iMac G5 running OS X 10.4.10, in Safari Version 3.0.3 (522.12.1), under nightly WebKit, text entry fields on this page, under item numbers 3. & 6., render as flat lines. This also occurs in other Yahoo "help" forms of this type. It doesn't happen in Firefox. A conflict between Yahoo!'s coding and Safari's resizable text fields? CW
Attachments
patch with ChangeLog and regression test case (68.03 KB, patch)
2007-09-13 17:56 PDT, Darin Adler
mitz: review+
Mark Rowe (bdash)
Comment 1 2007-09-12 16:23:06 PDT
Reduction: data:text/html,%3Ctextarea%20rows=%220%22%20cols=%220%22%3E%3C/textarea%3E This renders as a line (zero rows tall) in WebKit, while Firefox displays it three rows tall.
Mark Rowe (bdash)
Comment 2 2007-09-12 16:24:13 PDT
David Kilzer (:ddkilzer)
Comment 3 2007-09-12 23:06:52 PDT
This is a regression from Safari 2.0.4 (419.3) with original WebKit on Mac OS X 10.4.10 (8R218). Safari 2.0.4 (419.3) apparently has a minimum of rows=1 and cols=1 since the test case renders the same as <textarea rows="1" cols="1"></textarea>.
Darin Adler
Comment 4 2007-09-13 17:34:14 PDT
I've got this fixed.
Darin Adler
Comment 5 2007-09-13 17:56:25 PDT
Created attachment 16285 [details] patch with ChangeLog and regression test case
mitz
Comment 6 2007-09-14 01:19:04 PDT
Comment on attachment 16285 [details] patch with ChangeLog and regression test case r=me
Darin Adler
Comment 7 2007-09-14 08:49:36 PDT
Note You need to log in before you can comment on or make changes to this bug.