WebCore:

Reviewed by Mitz and Kevin Decker.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15197
          <rdar://problem/5478271> REGRESSION: Some Yahoo text entry fields
          render as lines rather than text entry boxes

        Test: fast/forms/textarea-rows-cols.html

        * html/HTMLTextAreaElement.cpp:
        (WebCore::HTMLTextAreaElement::HTMLTextAreaElement): Use constants for the default number
        of rows and columns.
        (WebCore::HTMLTextAreaElement::parseMappedAttribute): If rows/cols attribute has a value
        that's missing, non-numeric, or zero, then use the default value. Also check for the
        case where the effective value of the attribute isn't changing.

LayoutTests:

        Reviewed by Mitz and Kevin Decker.

        - test for http://bugs.webkit.org/show_bug.cgi?id=15197
          <rdar://problem/5478271> REGRESSION: Some Yahoo text entry fields
          render as lines rather than text entry boxes

        * fast/forms/textarea-rows-cols.html: Added.
        * platform/mac/fast/forms/textarea-rows-cols-expected.checksum: Added.
        * platform/mac/fast/forms/textarea-rows-cols-expected.png: Added.
        * platform/mac/fast/forms/textarea-rows-cols-expected.txt: Added.



Canonical link: https://commits.webkit.org/20025@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25562 268f45cc-cd09-0410-ab3c-d52691b4dbfc